--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,10 @@
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "filp/whoops": "^2.4",
-        "royalcms/ide-helper": "dev-master",
+        "royalcms/ide-helper": "^5.1",
         "phpspec/phpspec": "^6.1",
         "phpspec/prophecy": "~1.0",
         "hamcrest/hamcrest-php": "^2.0",
-        "sebastian/version": "^2.0",
         "d11wtq/boris": "^1.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
